--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -46,7 +46,7 @@
     <string name="install_known_issue">Il semble y avoir un problème connu (\"%s\") avec votre ROM. Installer le framework Xposed pourrait ne pas fonctionner ou provoquer des problèmes. Appuyez ici pour plus de détails.</string>
     <string name="install_reverted">La version \"%1$s\" de app_process a été installée dernièrement, mais la version \"%2$s\" vient d\'être détectée. Si vous ne vous attendiez pas à voir l\’ancienne version restaurée, vous devriez tenter l\'installation via recovery (auto ou manuel).</string>
     <string name="uninstall_reverted">app_process a été désinstallé dernièrement, mais la version \"%s\" vient d\'être détectée. Si vous ne vous attendiez pas à voir l\’ancienne version restaurée, vous devriez tenter la désinstallation via recovery (auto ou manuel).</string>
-    <string name="tap_to_dismiss">Touchez pour annuler</string>
+    <string name="tap_to_dismiss">Appuyez pour masquer</string>
     <string name="sdcard_location">Carte SD : %s</string>
 
     <!-- File operations -->
