--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -74,6 +74,9 @@
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">โมดูล Xposed ยังไม่ถูกเปิดใช้งาน</string>
+    <string name="module_is_not_activated_yet_detailed">%s ติดตั้งแล้วเรียบร้อย, แต่ยังไม่เปิดใช้งาน.</string>
+    <string name="activate_and_reboot">เปิดใช้งานและรีบูท</string>
+    <string name="module_activated">โมดูลเปิดใช้งานแล้วเรียบร้อย</string>
     <string name="module_empty_description">(ไม่มีคำอธิบาย)</string>
     <string name="module_no_ui">โมดูลนี้ไม่มหน้าตาแอพลิเคชั่น</string>
     <string name="no_xposed_modules_found">ไม่พบโมดูล Xposed!</string>
