--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -2,19 +2,24 @@
 <resources>
 
     <!-- General/various strings -->
+    <string name="menuSend">Wyślij</string>
+    <string name="menuSaveToSd">Zapisz na karcie SD</string>
+    <string name="xposed_not_active">Ostatnia wersja Xposed jest aktualnie nieaktywna. Czy zainstalowałeś proces framework i zresetowałeś telefon?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Witamy <b>w aplikacji Xposed</b>!\nProszę wybierz co chcesz zrobić:</string>
     <string name="tabInstall">Framework</string>
     <string name="tabInstallDescription">Tutaj możesz zarządzać procesem framework dostarczonym przez aplikację Xposed, która jest niezbędna do pracy modułów.</string>
     <string name="tabModules">Moduły</string>
-    <string name="tabModulesDescription">"Proces framework nie dodaje żadnych funkcji. Do tego potrzebujesz modułów. W tej sekcji można włączyć moduły po ich zainstalowaniu."</string>
+    <string name="tabModulesDescription">Proces framework nie dodaje żadnych funkcji. Do tego potrzebujesz modułów. W tej sekcji można włączyć moduły po ich zainstalowaniu.</string>
     <string name="tabDownload">Pobierz</string>
     <string name="tabDownloadDescription">Ta sekcja umożliwia dostęp do repozytorium modułów, dzięki czemu można wyszukać i pobrać te, które lubisz i aktualizować je na bieżąco.</string>
     <string name="welcome_framework_update_available">Aktualizacja procesu framework dostarczanego przez aplikację Xposed jest dostępna.</string>
     <string name="welcome_update_available">Jedna lub więcej aktualizacji dla modułów jest dostępna.</string>
     <string name="tabSettings">Ustawienia</string>
     <string name="tabSettingsDescription">Przejdź do tej sekcji, aby skonfigurować aplikację Xposed i proces framework.</string>
+    <string name="tabLogs">Logi</string>
+    <string name="tabLogsDescription">Wyświetl, zapisz i wyślij logi.</string>
     <string name="tabAbout">O aplikacji</string>
     <string name="tabAboutDescription">Dowiedz się o ludziach, którzy stworzyli Xposed, od których można uzyskać wsparcie dla tej aplikacji, itp.</string>
 
@@ -24,13 +29,22 @@
     <string name="installedVersion">aktywna</string>
     <string name="latestVersion">w pakiecie</string>
     <string name="versions">Wersje:</string>
-    <string name="soft_reboot">Miękki restart</string>
-    <string name="reboot">Restart</string>
+    <string name="install_header_reboot">Uruchom ponownie</string>
+    <string name="soft_reboot">Tryb szybki</string>
+    <string name="reboot">Tryb normalny</string>
     <string name="areyousure">Czy jesteś pewien?</string>
     <string name="phone_not_compatible">Xposed nie jest (jeszcze) kompatybilne z Android SDK wersją %1$d lub z twoją architektórą procesora (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed nie był testowany z tą wersją Android SDK %d, ale wygląda na to, że jest kompatybilna. Możesz spróbować instalacji jeśli czujesz się odważny.</string>
+    <string name="reboot_confirmation">Chcesz teraz zresetować telefon?</string>
+    <string name="install_warning_title">Bądź ostrożny!</string>
+    <string name="install_warning">W niektórych przypadkach urządzenie może nie uruchomić się po instalacji Xposed. Jeśli nigdy nie słyszałeś o miękkiej cegle, bootloopie i nie wiesz jak odzyskać w takiej sytuacji system, nie instaluj Xposed! W każdym bądź razie, zrobienie kopii zapasowej jest bardzo zalecane."</string>
+    <string name="dont_show_again">Nie pokazuj ponownie</string>
 
     <!-- File operations -->
+    <string name="file_copying">Kopiowanie %s…</string>
+    <string name="file_removing">Usuwanie %s…</string>
+    <string name="file_remove_failed">Nie można usunąć %s</string>
+    <string name="file_done">Zrobione! Zmiany będą aktywne po restarcie.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Moduł Xposed nie jest jeszcze aktywny</string>
@@ -46,6 +60,11 @@
     <string name="menuSearch">Szukaj</string>
     <string name="menuReload">Przeładuj</string>
     <string name="changes">Zmiany:</string>
+    <string name="reltype_stable">Stabilna</string>
+    <string name="reltype_stable_summary">Stabilna (niskie ryzyko błędów)</string>
+    <string name="reltype_beta_summary">Beta (spodziewaj się trochę błędów)</string>
+    <string name="reltype_experimental">Eksperymentalna</string>
+    <string name="reltype_experimental_summary">Eksperymentalna (wysokie ryzyko błędów)</string>
     <string name="download_unknown_author">autor nieznany</string>
     <string name="download_status_installed">Zainstalowano (wersja %s)</string>
     <string name="download_status_update_available">Dostępna aktualizacja (wersja %1$s \u2192 %2$s)</string>
@@ -63,21 +82,43 @@
     <string name="download_section_older">Więcej niż 30 dni temu</string>
 
     <!-- Settings tab -->
+    <string name="settings_group_installation">Instalacja</string>
+    <string name="settings_install_mode">Tryb instalacji</string>
+    <string name="install_mode_normal">Klasyczny (bezpośredni zapis)</string>
+    <string name="install_mode_recovery_auto">Poprzez recovery (automatyczna instalacja pliku zip)</string>
+    <string name="install_mode_recovery_manual">Poprzez recovery (zapisz zip na kartę SD i wybierz tryb ręczny instalacji)</string>
     <string name="settings_group_download">Pobierz</string>
     <string name="settings_enable_downloads">Włącz pobieranie</string>
     <string name="settings_enable_downloads_summary">Zezwól aplikacji Xposed na sprawdzanie dostępności aktualizacji i nowych modułów</string>
+    <string name="settings_release_type">Pokazywana wersja</string>
     <string name="settings_group_experimental">Eksperyment</string>
+    <string name="settings_disable_resources">Wyłącz zasoby konfliktów</string>
     <string name="settings_performance_experiment">Wyniki eksperymentu</string>
     <string name="settings_performance_experiment_summary">Jeśli to włączysz, wydajność systemu może albo się zwiększyć, zmniejszyć lub pozostać taka sama. Prosimy spróbować i zaraportować nam, który efekt widzisz. Musisz zainstalować ponownie framework i zresetować telefon po zmianie tego.</string>
+    <string name="settings_group_app">Aplikacja</string>
+    <string name="settings_theme">Temat</string>
+    <string name="settings_theme_light">Jasny</string>
+    <string name="settings_theme_dark">Ciemny</string>
+    <string name="settings_theme_black">Czarny (użyteczne dla ekranów AMOLED)</string>
 
     <!-- Logs tab  -->
+    <string name="logs_load_failed">Nie można odczytać logu:</string>
+    <string name="logs_save_failed">Nie można zapisać logu na kartę SD:</string>
+    <string name="sdcard_not_writable">Karta SD nie znaleziona lub nie można jej odczytać</string>
+    <string name="menuClearLog">Wyczyść teraz logi</string>
+    <string name="logs_cleared">Logi wyczyszczone</string>
+    <string name="logs_clear_failed">Nie można wyczyścić logu:</string>
+    <string name="log_is_empty">Log jest pusty</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Moi deweloperzy:</string>
+    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> oraz <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
+    <string name="about_developers_warning">Proszę nie kontaktować się z nami bezpośrednio. Użyj poniższego linku.</string>
     <string name="translator">czeci</string>
     <string name="about_version_label">Wersja tej aplikacji:</string>
     <string name="about_source_label">Źródło kodu:</string>
     <string name="about_support_label">Uzyskaj wsparcie z:</string>
+    <string name="about_support_warning">Ten link dotyczy tylko instalacji xposed i procesu framework. Nie używaj go w celu uzyskania pomocy dotyczącej modułów. Kontaktuj się z ich autorami.</string>
     <string name="about_libraries_label">Używane biblioteki:</string>
 
     <!-- DownloadView -->
@@ -99,6 +140,6 @@
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Pobieranie %1$s błędne: %2$d (%3$s)</string>
     <string name="repo_download_failed">Pobieranie %1$s błędne: %2$s</string>
-    <string name="repo_load_failed">Nie można załadować repozytorium z %1$s:\n%2$s"</string>
+    <string name="repo_load_failed">Nie można załadować repozytorium z %1$s:\n%2$s</string>
 
 </resources>
