Fixed non-translated String

--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -46,7 +46,7 @@
     <string name="install_known_issue">अप्पके रोम के साथ इशू(\"%s\") है। एक्स्पोसड इनस्टॉल करके आपको तकलीफ हो सकती है या बहुत गंभीर समस्या हो सकती है। इस विषय पर और जानकारी के लिए यहाँ क्लिक करे।</string>
     <string name="install_reverted">आप_प्रोसेस वर्जन \"%1$s\" पहलेसे हे इन्सटाल्ड है पर वर्जन \"%2$s\" अभी मिला है. अगर आपने जुना फाइल नहीं चाहा है तो आप बैकउप के लाइट कोशिश कर सकते है(ऑटोमैटिक या मैन्युअल).</string>
     <string name="uninstall_reverted">आप_प्रोसेस वर्जन \"$s\" पहलेसे हे इन्सटाल्ड है पर वर्जन \"%2$s\" अभी मिला है. अगर आपने जुना फाइल नहीं चाहा है तो आप बैकउप के लाइट कोशिश कर सकते है(ऑटोमैटिक या मैन्युअल).</string>
-    <string name="tap_to_dismiss">Tap to dismiss</string>
+    <string name="tap_to_dismiss">बंद करने के लिए यहाँ दबाए</string>
     <string name="sdcard_location">असडी कार्ड: %s</string>
 
     <!-- File operations -->
