--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- General/various strings -->
     <string name="menuSend">भेजो</string>
@@ -141,8 +141,8 @@
     <string name="settings_group_experimental">प्रायोगिक</string>
     <string name="settings_disable_resources">रिसोर्स हुक्स दिअब्ले करे</string>
     <string name="settings_disable_resources_summary">वोर्कारौंड्स फॉर कोम्फ्लिक्ट्स इन टी\n<b>चेतान्वनी:</b> मोदुलेस जो रिसोर्सेज बदलने की कोशिश करते है वो काम नहीं करेंगे जब यह चालू है।</string>
-    <string name="settings_performance_experiment" tools:ignore="UnusedResources">परफॉरमेंस प्रयोग</string>
-    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">Iअगर आप यह चालू करेंगे तो आपके सिस्टम का प्र्फोर्मनस बढ़ ,घट अथवा उतना ही रह सकता है। इसे इस्तमाल करने के लिए आप आजाद है और बाद में जरुर बताए की यह आपके लिए कैसे काम करता है। आपको फमेवरक वापिस डालना होगा और रिबूट भी करना होगा।</string>
+    <string name="settings_performance_experiment">परफॉरमेंस प्रयोग</string>
+    <string name="settings_performance_experiment_summary">Iअगर आप यह चालू करेंगे तो आपके सिस्टम का प्र्फोर्मनस बढ़ ,घट अथवा उतना ही रह सकता है। इसे इस्तमाल करने के लिए आप आजाद है और बाद में जरुर बताए की यह आपके लिए कैसे काम करता है। आपको फमेवरक वापिस डालना होगा और रिबूट भी करना होगा।</string>
     <string name="settings_group_app">एप्लीकेशन</string>
     <string name="settings_theme">थीम</string>
     <string name="settings_theme_light">लाइट्स</string>
