add module to "de.robv.android.xposed.installer.OPEN_SECTION" action
This patch add a extra "module" for the request module name, and will be much
easier for disabled xposed module to inform user to enable it in Xposed Installer.

Usage example:

    Intent intent = new Intent("de.robv.android.xposed.installer.OPEN_SECTION");
    intent.setPackage("de.robv.android.xposed.installer");
    intent.putExtra("section", "modules");
    intent.putExtra("module", getPackageName());
    intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
    startActivity(intent);

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -92,6 +92,7 @@
     <string name="module_support">支持</string>
     <string name="module_app_info">程序信息</string>
     <string name="module_uninstall">卸载</string>
+    <string name="show_all_modules">显示所有模块</string>
 
     <!-- Download tab -->
     <string name="menuSearch">搜索</string>
