--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="file_remove_failed">Could not remove %s</string>
     <string name="file_creating_directory">Creating directory %s&#8230;</string>
     <string name="file_create_directory_failed">Could not create directory %s</string>
-    <string name="file_write_failed">Could not write %s</string>
+    <string name="file_write_failed">Could not write to %s</string>
     <string name="file_writing_recovery_command">Writing recovery command&#8230;</string>
     <string name="file_writing_recovery_command_failed">Writing recovery command failed. Please use a different installation method.</string>
     <string name="file_done">Done! Changes will become active on reboot.</string>
